Signup page added. Now new users can signup. Scrollbar customize

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,24 @@ i {
   cursor: pointer;
 }
 
-/* body {
-  max-height: 100dvh;
-  overflow-y: hidden;
-} */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 
